# GP2040-RE

./: .gitignore  .gitmodules  Pico-GP2040-RE.drawio  README.md
GP2040-RE/: GP2040-RE.csv  GP2040-RE.kicad_pcb  GP2040-RE.kicad_prl  GP2040-RE.kicad_pro  GP2040-RE.kicad_sch  NES_SNES.kicad_sch  Power.kicad_sch  fp-info-cache  fp-lib-table  place_footprints.ini  sym-lib-table  ~GP2040-RE.kicad_sch.lck
GP2040-RE-Pico/: #auto_saved_files#  GP2040-RE-Pico.kicad_pro  sym-lib-table
GP2040-RE/Gerbers/: GP2040-RE-B_Cu.gbr  GP2040-RE-B_Mask.gbr  GP2040-RE-B_Paste.gbr  GP2040-RE-B_Silkscreen.gbr  GP2040-RE-Edge_Cuts.gbr  GP2040-RE-F_Cu.gbr  GP2040-RE-F_Mask.gbr  GP2040-RE-F_Paste.gbr  GP2040-RE-F_Silkscreen.gbr  GP2040-RE-In1_Cu.gbr  GP2040-RE-In2_Cu.gbr  GP2040-RE-NPTH.drl  GP2040-RE-PTH.drl  GP2040-RE-job.gbrjob
PGA2040 Prototype/: GP2040-RE.kicad_pcb  GP2040-RE.kicad_pro  GP2040-RE.kicad_sch  fp-lib-table  sym-lib-table  untitled.kicad_pcb
PGA2040 Prototype/Gerbers/: GP2040-RE-B_Cu.gbr  GP2040-RE-B_Mask.gbr  GP2040-RE-B_Paste.gbr  GP2040-RE-B_Silkscreen.gbr  GP2040-RE-Edge_Cuts.gbr  GP2040-RE-F_Cu.gbr  GP2040-RE-F_Mask.gbr  GP2040-RE-F_Paste.gbr  GP2040-RE-F_Silkscreen.gbr  GP2040-RE-NPTH-drl_map.gbr  GP2040-RE-NPTH.drl  GP2040-RE-PTH-drl_map.gbr  GP2040-RE-PTH.drl  GP2040-RE-drl.rpt  GP2040-RE-job.gbrjob
PGA2040 Prototype/Libraries/: GP2040-RE.kicad_sym
PGA2040 Prototype/Libraries/GP2040-RE.pretty/: 4-channel I2C-safe Bi-directional Logic Level Converter - BSS138.kicad_mod  Adafruit TCA4307 Hot-Swap I2C Buffer with Stuck Bus Recovery - STEMMA QT  Qwiic.kicad_mod  PGA2040_PTH_NO_SLOT.kicad_mod
src/: CMakeLists.txt  Console.cpp  FileManager.cpp  GameCube.cpp  I2CHandler.cpp  N64.cpp  NESController.cpp  PS1Controller.cpp  SNESController.cpp  main.cpp
src/controllers/: N64.cpp  NESController.cpp  SNESController.cpp
src/headers/: Console.h  FileManager.h  GameCube.h  GamepadState.h  I2CData.h  I2CHandler.h  IController.h  N64.h  NESController.h  PS1Controller.h  SNESController.h  Types.h  config.h
